--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,33 @@
 	position: relative
 }
 
+.popup {
+	position: fixed;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	width: 50%;
+	padding: 50px;
+	padding-bottom: calc(70px + 10px);
+	background: white;
+	border: 2px solid #000;
+	z-index: 5000;
+	text-align: center;
+	display: block;
+}
+
+.popup button {
+	margin-top: 30px;
+	padding: 5px 10px;
+	background: #24292E;
+	color: white;
+	border: none;
+	cursor: pointer;
+	position: absolute;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
 .Select,
 .Select div,
 .Select input,
@@ -47936,6 +47963,29 @@ form.btn>input[type="submit"] {
 }
 
 .overlay {
+	position: fixed;
+	/* top: 0; */
+	/* left: 0; */
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(5px);
+	z-index: 4500;
+	/* display: flex; */
+	transition: opacity .3s, visibility 0s .3s;
+	/* display: block; */
+	/* opacity: 0; */
+	/* visibility: hidden; */
+	/* position: fixed; */
+	/* width: 100%; */
+	/* height: 100%; */
+	/* top: 0; */
+	/* left: 0; */
+	/* z-index: 800 */
+}
+
+
+/* .overlay {
 	opacity: 0;
 	visibility: hidden;
 	transition: opacity .3s, visibility 0s .3s;
@@ -47945,7 +47995,7 @@ form.btn>input[type="submit"] {
 	top: 0;
 	left: 0;
 	z-index: 800
-}
+} */
 
 .overlay.open {
 	opacity: 1;
