--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -2,6 +2,36 @@
 	position: relative
 }
 
+@keyframes shrink {
+	from {
+	  transform: scale(1);
+	}
+	to {
+	  transform: scale(0);
+	}
+  }
+  
+  .shrink-animation {
+	animation: shrink 0.5s forwards;
+  }
+
+  @keyframes shake {
+	0%, 100% {
+	  transform: translateX(0);
+	}
+	25%, 75% {
+	  transform: translateX(-10px);
+	}
+	50% {
+	  transform: translateX(10px);
+	}
+  }
+  
+  .shake-animation {
+	animation: shake 0.5s;
+  }
+  
+
 .floating-btn-home {
 	position: fixed;
 	top: 30px;
